# SongSailor

./: .gitignore  CMakeLists.txt  README.md  config.cpp  config.h  config.ui  icons.qrc  main.cpp  music_downloader.py  paths.txt  songsailor.cpp  songsailor.h  songsailor.ui
src/: audioinfo.cpp  audioinfo.h  buttonhoverwatcher.cpp  buttonhoverwatcher.h  config.json  database.cpp  database.h  music_downloader.py  musicitem.cpp  musicitem.h  musiclistmodel.cpp  musiclistmodel.h  refresh_token.py  requirements.txt
